--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,4 +1,4 @@
-@media screen and (max-width:1000px){
+@media screen and (max-width:1200px){
     .hamburger,
     .toggle-menu{
     display: block;
@@ -9,11 +9,14 @@
     align-items: center;
     position:fixed;
     top: 0;
-    right: -300px;
+    right: -500px;
     background:white;
     width: 300px;
     height: 100%;
     padding-top:50px;
+    border: solid black;
+    border-radius: 20px;
+   margin-top: 0;
 }
 
 .menu li {
