--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -130,4 +130,14 @@ display: block;
     margin-bottom:5rem;
 }
 
+#sent{
+    display: block;
+    margin:auto;
+
+}
+
+#blog1{
+    display: block;
+    margin: auto;
+}
 }
